<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="Welcome_message">Welcome to Hify</string>
    <string name="register_message">Create a new Account</string>
    <string name="loading_name">Loading Name...</string>
    <string name="banner_ad_1" translatable="false">ca-app-pub-4372722091889992/6146466563</string>
    <string name="banner_ad_2" translatable="false">ca-app-pub-4372722091889992/9211613602</string>
    <string name="banner_ad_3" translatable="false">ca-app-pub-4372722091889992/2562444771</string>
    <string name="interstitial_ad_1" translatable="false">ca-app-pub-4372722091889992/6301120057</string>
    <string name="interstitial_ad_2" translatable="false">ca-app-pub-4372722091889992/2857247802</string>
    <string name="interstitial_ad_3" translatable="false">ca-app-pub-4372722091889992/3291813331</string>
    <string name="api_key">AIzaSyCJ7pGLnoyTiBF8_2tr6oKA0wzeKzR0FcY</string>
    <string name="default_notification_channel_id">@string/app_name</string>
    <string name="loading_message">Getting Message..</string>
    <string name="verify_your_mobile">Verify your Mobile</string>
    <string name="title_1">Title</string>
    <string name="text_1">Text</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="profile">My Profile</string>
    <string name="posts">Posts</string>
    <string name="action_remove">Unfriend</string>
    <string name="transition_name">logo_transition</string>
    <string name="extras">Extras</string>
    <string name="title_activity_weather">Weather</string>
    <string name="package_name">com.amsavarthan.hify</string>
    <string name="version_code">v1.6.5</string>
    <string name="local">local</string>
    <string name="default_location">default location</string>
    <string name="live">Live</string>
    <string name="today">Today</string>
    <string name="refresh_at">refresh at</string>
    <string name="precipitation">Precipitation</string>
    <string name="maxi_temp">daytime</string>
    <string name="mini_temp">nighttime</string>
    <string name="time">time</string>
    <string name="day">daytime</string>
    <string name="night">nighttime</string>
    <string name="wind">Wind</string>
    <string name="sensible_temp">Sensible temp</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">Uv index</string>
    <string name="forecast">Forecast</string>
    <string name="briefings">Briefings</string>
    <string name="daytime">Daytime</string>
    <string name="nighttime">Nighttime</string>
    <string name="publish_at">Publish at</string>
    <string name="feels_like">Feels like</string>
    <string name="follow_system">Follow system</string>
    <string name="of_clock">:00</string>
    <string name="yesterday">yday</string>
    <string name="tomorrow">twm</string>
    <string name="week">week</string>
    <string name="week_1">MON</string>
    <string name="week_2">TUE</string>
    <string name="week_3">WED</string>
    <string name="week_4">THU</string>
    <string name="week_5">FRI</string>
    <string name="week_6">SAT</string>
    <string name="week_7">SUN</string>
    <string name="wind_0">Calm</string>
    <string name="wind_1">Light air</string>
    <string name="wind_2">Light breeze</string>
    <string name="wind_3">Gentle breeze</string>
    <string name="wind_4">Moderate breeze</string>
    <string name="wind_5">Fresh breeze</string>
    <string name="wind_6">Strong breeze</string>
    <string name="wind_7">Near breeze</string>
    <string name="wind_8">Gale</string>
    <string name="wind_9">Strong gale</string>
    <string name="wind_10">Storm</string>
    <string name="wind_11">Violent storm</string>
    <string name="wind_12">Hurricane/Typhoon</string>
    <string name="aqi_1">Fresh air</string>
    <string name="aqi_2">Clear air</string>
    <string name="aqi_3">S-polluted</string>
    <string name="aqi_4">M-pollution</string>
    <string name="aqi_5">H-pollution</string>
    <string name="aqi_6">Dangerous</string>
    <string name="daily_overview">daily</string>
    <string name="hourly_overview">hourly</string>
    <string name="life_details">details</string>
    <string name="next">NEXT</string>
    <string name="done">DONE</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="about_app">ABOUT APP</string>
    <string name="introduce">introduce</string>
    <string name="gitHub">GitHub</string>
    <string name="translator">Translators</string>
    <string name="thanks">THX</string>
    <string name="date_format_short">M-d</string>
    <string name="date_format_long">MMM d</string>
    <string name="date_format_widget_short">EEEE, MMM d</string>
    <string name="date_format_widget_long">EEEE, MMM d</string>
    <string name="date_format_widget_oreo_style">EEEE, MMM d │ </string>
    <string name="baidu_location">Baidu Location</string>
    <string name="retrofit">Retrofit 2.0</string>
    <string name="about_retrofit">Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="glide">Glide</string>
    <string name="about_glide">An image loading and caching library for Android focused on smooth scrolling.</string>
    <string name="gson">Gson</string>
    <string name="about_gson">A Java serialization/deserialization library that can convert Java Objects into JSON and back.</string>
    <string name="greenDAO">GreenDAO</string>
    <string name="about_greenDAO">greenDAO is a light and fast ORM solution for Android that maps objects to SQLite databases.</string>
    <string name="page_indicator">InkPageIndicator</string>
    <string name="about_page_indicator">InkPageIndicator created by @nickbutcher for Plaid https://github.com/nickbutcher/plaid and backported by David Pacioianu for API 14+ (4.0+).</string>
    <string name="circular_progress_view">CircularProgressView</string>
    <string name="about_circular_progress_view">Material style circular progress bar for Android.</string>
    <string name="feedback_request_permission">Permissions</string>
    <string name="feedback_request_location_permission_success">Request location permission success.</string>
    <string name="feedback_request_location_permission_failed">Request location permission failed.</string>
    <string name="feedback_location_failed">Location failed.</string>
    <string name="feedback_get_weather_failed">Request weather data failed.</string>
    <string name="feedback_view_style">Style of view.</string>
    <string name="feedback_show_widget_card">Card background.</string>
    <string name="feedback_hide_subtitle">Hide Subtitle.</string>
    <string name="feedback_subtitle_data">Subtitle data.</string>
    <string name="feedback_black_text">Dark text.</string>
    <string name="feedback_click_toggle">Click chart to toggle data.</string>
    <string name="feedback_no_data">NO DATA</string>
    <string name="feedback_collect_failed">This location already exists.</string>
    <string name="feedback_collect_succeed">Add location success.</string>
    <string name="feedback_delete_succeed">Delete location success.</string>
    <string name="feedback_location_list_cannot_be_null">The location list can not be null.</string>
    <string name="feedback_search_location">Search a location or \"local\"…</string>
    <string name="feedback_not_yet_location">Not yet location…</string>
    <string name="feedback_search_nothing">Search nothing…</string>
    <string name="feedback_initializing">Initializing…</string>
    <string name="feedback_refresh_notification_after_back">Take effect when back to home page.</string>
    <string name="feedback_refresh_notification_now">Refresh now.</string>
    <string name="feedback_refresh_ui_after_refresh">Take effect when refresh data.</string>
    <string name="feedback_restart">Take effect when restart.</string>
    <string name="action_alert">Alert</string>
    <string name="action_manage">Manage</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="settings_category_basic">Basic</string>
    <string name="settings_title_background_free">Background free.</string>
    <string name="settings_title_ui_style">UI style.</string>
    <string name="settings_title_card_order">Card order.</string>
    <string name="settings_title_gravity_sensor_switch">Open gravity sensor.</string>
    <string name="settings_title_navigationBar_color">Navigation bar color.</string>
    <string name="settings_navigationBar_color_on">Show theme color.</string>
    <string name="settings_navigationBar_color_off">Dark.</string>
    <string name="settings_language">Language.</string>
    <string name="settings_title_fahrenheit">Fahrenheit.</string>
    <string name="settings_title_imperial">Imperial units.</string>
    <string name="settings_title_refresh_rate">Automatic refresh rate</string>
    <string name="settings_title_alert_notification_switch">Send alert message.</string>
    <string name="settings_title_permanent_service">Permanent service.</string>
    <string name="settings_category_forecast">Forecast</string>
    <string name="settings_title_forecast_today">Forecast for today.</string>
    <string name="settings_title_forecast_today_time">Forecast time for today.</string>
    <string name="settings_title_forecast_tomorrow">Forecast for tomorrow.</string>
    <string name="settings_title_forecast_tomorrow_time">Forecast time for tomorrow.</string>
    <string name="settings_category_widget">Widget</string>
    <string name="settings_title_icon_style">Icon style.</string>
    <string name="settings_title_click_widget_to_refresh">Refresh widget when you click it.</string>
    <string name="settings_category_notification">Notification</string>
    <string name="settings_title_notification">Send message.</string>
    <string name="settings_title_notification_temp_icon">Show temperature as mini icon.</string>
    <string name="settings_title_notification_text_color">Text color.</string>
    <string name="settings_title_notification_background">Background color.</string>
    <string name="settings_notification_background_on">Same as control center in AOSP.</string>
    <string name="settings_notification_background_off">Follow system.</string>
    <string name="settings_title_notification_can_be_cleared">Can clear.</string>
    <string name="settings_notification_can_be_cleared_on">Can clear.</string>
    <string name="settings_notification_can_be_cleared_off">Can not clear.</string>
    <string name="settings_title_notification_hide_icon">Hide message icon.</string>
    <string name="settings_notification_hide_icon_on">Hide.</string>
    <string name="settings_notification_hide_icon_off">Show.</string>
    <string name="settings_title_notification_hide_in_lockScreen">Hide in lock screen.</string>
    <string name="settings_notification_hide_in_lockScreen_on">Hide (need to open in the system settings).</string>
    <string name="settings_notification_hide_in_lockScreen_off">Show.</string>
    <string name="settings_title_notification_hide_big_view">Hide big view.</string>
    <string name="settings_notification_hide_big_view_on">Hide.</string>
    <string name="settings_notification_hide_big_view_off">Show.</string>
    <string name="sp_widget_day_setting">widget_day_setting</string>
    <string name="sp_widget_week_setting">widget_week_setting</string>
    <string name="sp_widget_day_week_setting">widget_day_week_setting</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_show_now">Show now</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_share">Share</string>
</resources>