<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_create_white_24dp"
        android:orderInCategory="70"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="80"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="85"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mark_as_done"
        android:icon="@drawable/ic_done_white_24dp"
        android:orderInCategory="90"
        android:title="@string/action_mark_as_done"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_now"
        android:orderInCategory="100"
        android:title="@string/action_show_now"
        app:showAsAction="never" />
</menu>